Add routing, remove unused files, app refactoring

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.2",
+    "dayjs": "^1.8.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.6.2",
