--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wwweeeaaattthhheeerrr",
-  "version": "0.1.0",
+  "name": "react-weather-app",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "bulma": "^0.7.2",
