--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-weather-app",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://georgius1024.github.io/weather-app-with-routing",
   "dependencies": {
     "bulma": "^0.7.2",
     "dayjs": "^1.8.0",
